Fix image aspect ratio bug on small screens

--- a/styles/content.styl
+++ b/styles/content.styl
@@ -29,8 +29,7 @@ contentBorder = 1px solid rgba(0, 0, 0, 0.2)
 
 #content > section,
 #content > article
-	display flex
-	flex-flow row wrap
+	display block
 	width 100%
 	max-width maxSectionSize
 	font-family textFont
